apps/nas/homeassistant-assist/kokoro-tts/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kokoro-tts-private
  namespace: homeassistant-assist
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "kokoro.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: kokoro-tts-predictor
      port: 80
    timeouts:
      request: 120s
      backendRequest: 120s
